Enable Gitlab Advanced SAST and dependency scanning.
This enables Gitlab's Advanced Static Application Security Testing (SAST) which
scans for known vulnerabilities in our code, and our dependencies during the CI
pipeline. The Advanced SAST does additional testing above the basic one by
performing cross-function and cross-file taint analysis.

This also enables the dependency scanning functionality, which looks for
vulnerabilities in the dependencies.

The tests are run in the test pipeline stage, and produced in the CI
output. This creates a security 'dashboard' of issues that we can triage.

I've set the `DS_GRADLE_RESOLUTION_POLICY` to 'none' due to this issue showing
up in a test pipeline: https://docs.gitlab.com/user/application_security/dependency_scanning/troubleshooting_dependency_scanning/#error-project-has-unresolved-dependencies

References:
- https://docs.gitlab.com/user/application_security/sast/
- https://docs.gitlab.com/user/application_security/sast/gitlab_advanced_sast/
- https://docs.gitlab.com/user/application_security/dependency_scanning/

Typo fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,12 @@ variables:
   # When using dind, it's wise to use the overlayfs driver for
   # improved performance.
   DOCKER_DRIVER: overlay
+  GITLAB_ADVANCED_SAST_ENABLED: 'true'
+  DS_GRADLE_RESOLUTION_POLICY: 'none'
+
+include:
+  - template: Jobs/Dependency-Scanning.gitlab-ci.yml
+  - template: Jobs/SAST.gitlab-ci.yml
 
 build-docker-image:
   variables:
@@ -28,7 +34,7 @@ build-docker-image:
 # Basic android and gradle stuff
 # Check linting
 lintDebug:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: "containers.torproject.org/tpo/applications/vpn:main"
   interruptible: true
   stage: test
   script:
@@ -40,7 +46,7 @@ lintDebug:
 
 # Make Project
 assembleDebug:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: "containers.torproject.org/tpo/applications/vpn:main"
   interruptible: true
   stage: build
   script:
@@ -79,7 +85,7 @@ publish:
 
 # Run all tests, if any fails, interrupt the pipeline(fail it)
 debugTests:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: "containers.torproject.org/tpo/applications/vpn:main"
   interruptible: true
   stage: test
   script:
